# demo_project

./: MCP.md  README.md  TIMEZONE_MIGRATION.md  alembic.ini  docker-compose.yml  pyproject.toml  setup-codespaces.sh  validate_timezone_migration.py
.devcontainer/: Dockerfile  devcontainer-simple.json  devcontainer.json  setup.sh
.github/: CODESPACES.md  copilot-instructions.md
.github/codespaces/: setup.sh
.github/prompts/: architecture.prompt.md
.github/workflows/: codespaces-prebuild.yml  validate-devcontainer.yml
app/: __init__.py  database.py  main.py  models.py  repositories.py
docs/: architecture.md  db_improvements.md  requirements.md
migrations/: env.py
migrations/versions/: 87e9b654863c_create_initial_schema_for_review_.py  add_reviewed_object_id_indexes.py  f92328734279_migrate_timestamps_to_timezone_aware.py  migrate_timestamps_to_timezone_aware.py
scripts/: populate_db.py
tests/: __init__.py  test_main.py  test_review_schema.py  test_timezone_aware.py  test_timezone_timestamps.py
